# prosa-kobo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: auto-merge.yaml  ci.yaml  docs.yaml
openapi/: openapi.yaml
openapi/components/parameters/: ApiKey.yaml  DeviceId.yaml
openapi/components/schemas/: DeviceLog.yaml  LinkDeviceRequest.yaml
openapi/paths/devices/: linked.yaml  unlinked.yaml
src/: main.rs
src/app/: error.rs  mod.rs  server.rs  tracing.rs
src/app/annotations/: data.rs  handlers.rs  models.rs  routes.rs  service.rs
src/app/authentication/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/books/: data.rs  handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/covers/: data.rs  handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/devices/: data.rs  handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/initialization/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/metadata/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/proxy/: mod.rs  proxy.rs  routes.rs
src/app/shelves/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/state/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/sync/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/app/tokens/: data.rs  mod.rs  models.rs  service.rs
src/client/: annotations.rs  book.rs  cover.rs  metadata.rs  mod.rs  prosa.rs  shelf.rs  state.rs  sync.rs
src/config/: config.rs  default.toml
src/database/: database.rs  mod.rs  tables.rs
tests/: .prettierrc  eslint.config.cjs  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json
tests/books/: Alices_Adventures_in_Wonderland.epub  The_Great_Gatsby.epub  The_Wonderful_Wizard_of_Oz.epub  This_is_not_an_epub.txt
tests/config/: .env  .env.local
tests/integration/: annotations.test.ts  books.test.ts  covers.test.ts  devices.test.ts  initialization.test.ts  metadata.test.ts  oauth.test.ts  shelves.test.ts  state.test.ts  sync.test.ts
tests/utils/: common.ts  devices.ts
(+18 files in other folders)
