[package]
name = "kobont"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.1"
base64 = "0.22.1"
chrono = "0.4.40"
config = "0.15.9"
jsonwebtoken = { version = "9.3.1", default-features = false }
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.218"
serde_json = "1.0.140"
serde_with = "3.12.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.0", features = ["full"] }
ureq = { version = "3.0.11", features = ["json"] }
urlencoding = "2.1.3"
