[package]
name = "prosa-kobo"
version = "0.1.0"
edition = "2024"
include = ["src/**/*"]

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
base64 = "0.22.1"
chrono = "0.4.42"
config = "0.15.15"
image = "0.25.8"
isolang = "2.4.0"
jsonwebtoken = { version = "9.3.1", default-features = false }
log = "0.4.28"
rand = "0.9.2"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.14.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "chrono"] }
ureq = { version = "3.1.2", features = ["json"] }
urlencoding = "2.1.3"
